--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
     "nodemailer": "^6.9.13",
+    "pdfjs-dist": "^4.7.76",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
+    "showdown": "^2.1.0",
     "stripe": "^13.11.0",
     "zod": "^3.22.4"
   },
