--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "mailgun.js": "^9.4.1",
-    "mdpdf": "^3.0.4",
+    "mdpdf": "github:indie-rok/mdpdf",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
